assets/sass/custom.scss
// Sizes
$max-width: {{ .Param "style.pageWidth" | default "750px;" }};
$avatar-size: {{ .Param "style.avatarSize" | default "90px;" }};

// Colors
$black: {{ .Param "style.colorBlack" | default "#222222" }};
$red: {{ .Param "style.colorRed" | default "#dc3545" }};

// Font
$font-family: {{ .Param "style.fontFamily" | default "Inconsolata" }};
$font-size: 1rem;

html {
    font-size: 12pt;
}

// Margins
$y-small: 0.6rem;
$y-medium: 1.0rem;

// Placeholders
%link-default {
    color: $red;
    text-decoration: none;
    & * {
        color: $red;
    }
    &:hover {
        color: $red;
        text-decoration: underline;
    }
}
%link-dark {
    color: $black;
    text-decoration: none;
    & * {
        color: $black;
    }
    &:hover {
        color: $black;
        text-decoration: underline;
    }
}
%table-cell {
    border: 1px solid #cccccc;
    padding: 6px 12px;
    text-align: left;
    vertical-align: top;
}

// Style
* {
    color: $black;
    font-family: $font-family;
    line-height: 1.5;
}
.container {
    max-width: $max-width;
}
.navbar-brand {
    @extend %link-dark;
    font-size: 24pt;  // i.e. not relative
    letter-spacing: 0.5px;
}
.nav-link {
    @extend %link-default;
    font-size: 14pt;
}
.navbar-expand-sm .navbar-nav .nav-link {
	padding-right: 6pt;
	padding-left: 6pt;
}
#content {
    a {
        @extend %link-default;
    }
    a:not([class]) {
        @extend %link-default;
        color: $black;
        > * {
            color: $black;
        }
    }
    a:not([class])::after {
        position: relative;
        font-family: "Font Awesome 5 Free";
        content: "\f35d";
        font-weight: 900;
        margin-left: 0.25em;
        font-size: 50%;
        top: -0.65em;
        color: #933;
        font-feature-settings: "caps";
        font-variant-numeric: normal;
    }
    input.font-size-btn {
        
    }

    p {
        margin-bottom: $y-small;
    }
    h1, h2, h3, h4, h5, h6 {
        font-size: medium;
        font-weight: bold;
        margin: $y-medium 0 $y-small 0;
    }
    @for $i from 1 through 4 {
        h#{$i} {
            font-size: $font-size + 0.2 * (4 - $i);
        }
    }
    img {
        display: block;
        margin: $y-medium auto;
        max-width: 100%;
    }
    .avatar > img {
        border-radius: 50%;
        float: right;
        margin: -8px 0 0 16px;
        height: $avatar-size;
        width: $avatar-size;
    }
    ol {
        counter-reset: list;
        list-style: none;
        padding-left: 2rem;
        & > li {
            display: table-row;
        }
        & > li:before {
            content: "[" counter(list, decimal) "] ";
            counter-increment: list;
            display: table-cell;
            text-align: right;
            padding-right: .5em;
        }
    }
    .container > ol, .footnotes > ol {
        padding-left: 0;
    }
    ul {
        list-style: inside;
        padding-left: 2rem;
        & > li {
            list-style-position: outside;
            margin-left: 1em;
        }
    }
    .container > ul, .footnotes > ul {
        padding-left: 0;
    }
    table {
        margin: $y-medium auto;
        width: 100%;
        & th {
            @extend %table-cell;
            font-weight: bold;
        }
        & td {
            @extend %table-cell;
        }
        & tr:nth-child(2n) {
            background-color: #f8f8f8;
        }
    }
    blockquote {
        border-left: 4px solid;
        font-style: italic;
        margin: $y-medium 0;
        padding: 8px 8px;
    }

    blockquote > p:last-child {
        margin-bottom: 0;
    }
    code {
        color: $black;
        background-color: #f8f8f8;
        border: 1px solid #cccccc;
        border-radius: 10%;
        padding: 0px 4px;
        font-family: 'Fira Mono';
    }
    pre code {
        all: unset;
    }
    pre code span {
        font-family: 'Fira Mono';
    }
    .highlight {
        margin: $y-medium auto;
        & > pre {
            padding: 8px 8px;
        }
    }
}
#footer {
    a {
        @extend %link-dark;
    }
}

#bibbase {
    // Remove annoying 'generated by BibBase'.
    > div:first-of-type {
        display: none;
    }

    a.dropdown-toggle::after {
        content: "";
    }
    img:not([alt="bibbase.org"]) {
        display: none;
    }

    img[alt="bibbase.org"] {
        margin: 0;
    }

    b.caret {
        display: none;
    }

    a.dropdown-toggle {
        &:hover {
            color: $black;
            text-decoration: none;
        }
    }
    #bibbase_header {
        .nav a {
            color: $black;
        }
    }
    #bibbase_body {
        span.bibbase_paper_content.dontprint a::after {
            display: none !important;
        }
        span.bibbase_paper_content:first-child {
            // display: none !important;
            display: none !important;
            min-width: 0 !important;
            margin-left: -2px;
        }
    }
}

div.font-size-btns {
    // display: flex;
    // justify-content: space-around;
    // width: 50%;
}

/* CSS */

.font-size-btn {
    display: inline-block;
    outline: 0;
    cursor: pointer;
    padding: 5px 16px;
    font-size: 14px;
    font-weight: 500;
    font-family: monospace;
    line-height: 20px;
    vertical-align: middle;
    border: 1px solid;
    border-radius: 6px;
    margin: 1pt;
    color: #24292e;
    background-color: #fafbfc;
    border-color: #1b1f2326;
    box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px 0px inset;
    transition: 0.2s cubic-bezier(0.3, 0, 0.5, 1);
    transition-property: color, background-color, border-color;
    :hover {
        background-color: #f3f4f6;
        border-color: #1b1f2326;
        transition-duration: 0.1s;
    }
}

